Hab meinen Namen noch richtig geschrieben

--- a/documentation/roga_docu.tex
+++ b/documentation/roga_docu.tex
@@ -191,7 +191,7 @@ a4paper,     %% defines the paper size: a4paper (default), a5paper, letterpaper,
 %%% author(s)
 \author{Torben Miller (3164082)\ \ \ \ \ \and
 Fabian Biedlingmaier (3224303)\ \ \ \ \ \ \and
-Nicolas Hartlieb (3155952)}
+Nico Hartlieb (3155952)}
 
 %%% date
 \date{Heidelberg, am \today{}}
