Da stand Matrikelnummer bei Winkelgeschwindigkeit drinnen, warum auch immer. ist verbessert

--- a/documentation/roga_docu.tex
+++ b/documentation/roga_docu.tex
@@ -302,7 +302,7 @@ In diesem Projekt wurde die Rolle der Katze übernommen.
 
 \subsection{Anforderungen}
 Bei den verwendeten Robotern handelt es sich jeweils um einen Turtlebot3 Burger.\\ 
-Dieser Roboter hat eine maximale Lineargeschwindigkeit von 0.22 m/s und eine maximale WinkelgeschwindMatrikelnummerigkeit von 2.84 rad/s. \footnote{\url{https://emanual.robotis.com/docs/en/platform/turtlebot3/specifications/\#hardware-specifications}}\\
+Dieser Roboter hat eine maximale Lineargeschwindigkeit von 0.22 m/s und eine maximale Winkelgeschwindgkeit von 2.84 rad/s. \footnote{\url{https://emanual.robotis.com/docs/en/platform/turtlebot3/specifications/\#hardware-specifications}}\\
 Die Drehung des Roboters wird durch einen Radianten \footnote {Wertebereich [0:2 $\pi$]} angegeben. Ein positiver Wert führt zu einer Drehung gegen den Uhrzeigersinn, dementsprechend führt ein negativer Wert zu einer Drehung in Uhrzeigersinn.
 Um Hindernisse zu erkennen, besitzt er einen Laserscanner mit einer Scanreichweite von 120 bis 3500 mm und einer Auflösung von 1 Grad. \footnote {1 Gard ~ 0,0174533} \footnote{\url{https://emanual.robotis.com/docs/en/platform/turtlebot3/appendix_lds_01/}} 
 \\\\
